--- a/play.html
+++ b/play.html
@@ -49,7 +49,7 @@
         }
         .hero {
             position: relative;
-            min-height: clamp(60vh, 70vh, 80vh);
+            min-height: 90vh;
             width: 100%;
             overflow: hidden;
         }
@@ -61,6 +61,16 @@
             object-fit: cover;
             filter: contrast(1.1) saturate(1.05);
             will-change: transform;
+        }
+        @media (max-width: 820px) {
+            .hero {
+                min-height: 70vh;
+            }
+        }
+        @media (max-width: 480px) {
+            .hero {
+                min-height: 60vh;
+            }
         }
         .hero .video-fade {
             position: absolute;
