--- a/play.html
+++ b/play.html
@@ -49,27 +49,26 @@
         }
         .hero {
             position: relative;
-            min-height: 90vh;
+            min-height: 100vh;
             width: 100%;
             overflow: hidden;
         }
         .hero video {
             position: absolute;
-            inset: 0;
-            width: 100%;
-            height: 100%;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            min-width: 100%;
+            min-height: 100%;
+            width: auto;
+            height: auto;
             object-fit: cover;
             filter: contrast(1.1) saturate(1.05);
             will-change: transform;
         }
         @media (max-width: 820px) {
             .hero {
-                min-height: 70vh;
-            }
-        }
-        @media (max-width: 480px) {
-            .hero {
-                min-height: 60vh;
+                min-height: clamp(60vh, 70vh, 80vh);
             }
         }
         .hero .video-fade {
