--- a/play.html
+++ b/play.html
@@ -58,13 +58,19 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            min-width: 100%;
-            min-height: 100%;
-            width: auto;
-            height: auto;
+            width: 100%;
+            height: 100%;
             object-fit: cover;
+            object-position: center;
             filter: contrast(1.1) saturate(1.05);
             will-change: transform;
+        }
+        @media (min-width: 821px) {
+            .hero video {
+                transform: translate(-50%, -50%) scale(1.5);
+                min-width: 100%;
+                min-height: 100%;
+            }
         }
         @media (max-width: 820px) {
             .hero {
