Replace hero video with new IMG_0324.MOV

--- a/play.html
+++ b/play.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-    <link rel="preload" as="video" href="videos/syxy-hero.mp4" type="video/mp4" />
+    <link rel="preload" as="video" href="videos/IMG_0324.MOV" type="video/quicktime" />
     <title>SYXY</title>
     <style>
         :root { color-scheme: dark; }
@@ -172,7 +172,7 @@
 
     <section class="hero">
         <video autoplay muted loop playsinline preload="metadata">
-            <source src="videos/syxy-hero-optimized.mp4" type="video/mp4">
+            <source src="videos/IMG_0324.MOV" type="video/quicktime">
         </video>
         <div class="video-fade"></div>
     </section>
