--- a/play.html
+++ b/play.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-    <link rel="preload" as="video" href="videos/IMG_0324.MOV" type="video/quicktime" />
+    <link rel="preload" as="video" href="videos/IMG_0324.mp4" type="video/mp4" />
     <title>SYXY</title>
+    <!-- Updated video -->
     <style>
         :root { color-scheme: dark; }
         * { box-sizing: border-box; }
@@ -172,7 +173,8 @@
 
     <section class="hero">
         <video autoplay muted loop playsinline preload="metadata">
-            <source src="videos/IMG_0324.MOV" type="video/quicktime">
+            <source src="videos/IMG_0324.mp4" type="video/mp4">
+            <source src="videos/IMG_0324.MOV" type="video/mp4">
         </video>
         <div class="video-fade"></div>
     </section>
